CDOC-149: getFirst -> get(0) for Java 17 compatibility